<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".login.profileFragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profileTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_color"
            app:elevation="0dp"
            app:title="Your Profile"
            app:titleTextColor="@color/text_color" />
    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:contentDescription="@string/profile_image"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBarLayout" />

    <ImageView
        android:id="@+id/ivAddIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_icon"
        android:src="@drawable/ic_add_circle"
        app:layout_constraintLeft_toRightOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:tint="@color/icon_tint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAddIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:background="@null"
            android:fontFamily="@font/mulish_medium"
            android:hint="@string/first_name"
            android:imeActionLabel="send"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:background="@null"
            android:fontFamily="@font/mulish_medium"
            android:hint="@string/last_name"
            android:imeActionLabel="send"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:backgroundTint="@color/button_color"
            android:padding="@dimen/medium_padding"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="50dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>