<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivOnBoarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_on_boarding_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOnBoarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/mulish_bold"
            android:padding="@dimen/small_padding"
            android:text="@string/on_boarding_text"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/ivOnBoarding"
            app:layout_constraintRight_toRightOf="@+id/ivOnBoarding"
            app:layout_constraintTop_toBottomOf="@+id/ivOnBoarding"
            app:layout_constraintVertical_bias="0.0" />



        <TextView
            android:id="@+id/tvTermsAndCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:clickable="true"
            android:text="@string/terms_and_condition"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/btnStartMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:padding="@dimen/medium_padding"
            android:text="@string/on_boarding_button_text"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/button_text_color"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>