<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".message.MessageActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:elevation="10dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/icon_tint">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/user_profile_picture"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageViewSmall"
            tools:src="@drawable/flag_india" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:ellipsize="end"
            android:fontFamily="@font/mulish_medium"
            android:lines="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Krish Parekh" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToLoad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/inputBox"
        android:layout_below="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="ifContentScrolls"
            tools:itemCount="10"
            tools:listitem="@layout/list_item_chat_recv" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/inputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingStart="@dimen/small_padding"
        android:paddingTop="@dimen/extra_small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:paddingBottom="@dimen/extra_small_padding">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_small_margin"
            android:layout_toStartOf="@id/btnSend"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color">

                <ImageView
                    android:id="@+id/emojiBtn"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:contentDescription="@string/emoji_button"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:src="@drawable/chat_icon_smile" />

                <com.vanniktech.emoji.EmojiEditText
                    android:id="@+id/etMessageBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_toEndOf="@id/emojiBtn"
                    android:background="@color/background_color"
                    android:gravity="top|start"
                    android:hint="@string/type_your_message"
                    android:imeOptions="actionGo"
                    android:inputType="textMultiLine|textCapSentences|textLongMessage|text"
                    android:lineSpacingExtra="5dp"
                    android:maxHeight="120dp"
                    android:maxLength="700"
                    android:paddingTop="@dimen/medium_padding"
                    android:paddingBottom="@dimen/medium_padding"
                    android:singleLine="false"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="14sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/btnSend"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/send_button"
            android:focusable="true"
            android:src="@drawable/chat_icon" />
    </RelativeLayout>

</RelativeLayout>